syntax = "proto3";

package gRPCCommunication;

enum GrpcBaseProtoType {
    DOUBLE = 0;
    FLOAT = 1;
    INT32 = 2;
    INT64 = 3;
    UINT32 = 4;
    UINT64 = 5;
    SINT32 = 6;
    SINT64 = 7;
    FIXED32 = 8;
    FIXED64 = 9;
    SFIXED32 = 10;
    SFIXED64 = 11;
    BOOL = 12;
    STRING = 13;
    BYTES = 14;
}

message GrpcProtoType {
    GrpcBaseProtoType type = 1;
    bool repeated = 2;
}